--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <!-- animaciones -->
     <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="index.css" type="text/css">
@@ -17,7 +18,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-light animate__animated animate__backInLeft" style="background-color: burlywood;">
             <div class="container-fluid">
-              <a class="navbar-brand" id="navbar" href="#">Relapso Tienda</a>
+              <a class="navbar-brand" id="navbar" href="#">Relapso Store</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -62,13 +63,13 @@
             <div class="container mt-5 mb-5 py-2" style="background-color: burlywood;">
                 <div class="row justify-content-around">
                     <div class="col-6">
-                        <h1 id="titulo2">Relapso Tienda</h1>
+                        <h1 id="titulo2">Relapso Store</h1>
                         <p">
                           Somos la empresa mas grande de Prendas para vestir de Colombia 
                           e internacional con los mejores precios y los
                           últimos lanzamientos del mercado.
                         </p>
-                        <button id="btndes" class="btn fw-bold animate__animated animate__lightSpeedInRight" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample" style="background-color: black;color: burlywood;">
+                        <button id="btndes" class="btn animate__animated animate__lightSpeedInRight" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample" style="background-color: black;color: burlywood;">
                             Conocer Mas
                           </button>
 
@@ -85,7 +86,7 @@
     <section>
         <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasExampleLabel">Relapso Tienda</h5>
+              <h5 class="offcanvas-title" id="offcanvasExampleLabel">Relapso Store</h5>
               <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
@@ -160,7 +161,7 @@
         <nav class="row">
           <!-- logo -->
           <h2 href="#" class="col-5 text-reset row align-items-center">
-            Relapso Tienda
+            Relapso Store
           </h2>
           <!-- menu -->
           <ul class="col-4 list-unstyled">
@@ -184,12 +185,17 @@
 
     </footer> 
 
+    <div class="text-center py-2"  style="background-color: gray;">
+      <small>&copy; 2022 <b>Relapso Tienda</b> -Derechos Reservados</small>
+    </div>
+
     <!-- <button type="boton" class="btn btn-info" id="boton">click</button> -->
 
     <script src="js/llenadoTienda.js"></script>
     <script src="js/eventos.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- Iconos -->
     <script src="https://kit.fontawesome.com/67c132a48c.js" crossorigin="anonymous"></script>
 </body>
 </html>
