--- a/tienda.html
+++ b/tienda.html
@@ -18,7 +18,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-light animate__animated animate__backInLeft" style="background-color: darkmagenta;">
         <div class="container-fluid">
-          <a class="navbar-brand" id="navbar" href="index.html" style="color: white;">Relapso Tienda</a>
+          <a class="navbar-brand" id="navbar" href="index.html" style="color: white;">Relapso Store</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -31,9 +31,9 @@
                 <a class="nav-link" href="#" style="color: white;">Link</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" style="color: white;">
+                <a class="nav-link" href="#" id="verCarrito" style="color: white;">
                   <i class="bi bi-cart-plus-fill icono"></i>
-                  <span class="position-absolute top-10 start-10 translate-middle badge rounded-pill bg-danger invisible">
+                  <span id="capsula" class="position-absolute top-10 start-10 translate-middle badge rounded-pill bg-danger invisible">
                     99+
                   </span>
                 </a>
@@ -41,7 +41,7 @@
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Buscador" aria-label="Search">
-              <button class="btn btn-outline-dark" type="submit">Buscar</button>
+              <button class="btn btn-outline-light"  type="submit">Buscar</button>
             </form>
           </div>
         </div>
@@ -49,7 +49,7 @@
       />
 
     <div class="m-2 animate__animated animate__lightSpeedInRight">
-         <a class="btn fw-bold" style="background-color: darkmagenta; color: white; border-color: gold;" href="index.html" role="button">Regresar</a>
+         <a class="btn btn-outline-light " style="background-color: darkmagenta; color: white; border-color: gold;" href="index.html" role="button">Regresar</a>
     </div>
 
     </header>
@@ -70,20 +70,21 @@
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title">Relapso Tienda</h5>
+                  <h5 class="modal-title">Relapso Store</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                   <div class="container">
                     <div class="row">
                       <div class="col-4">
-                          <img src="" alt="" class="w-100 img-fluid" id="fotoinfo">
+                          <img src="" alt="" class="w-100 img-fluid" id="fotoInfo">
                       </div>
                       <div class="col-8">
-                          <h4 class="text-center" id="tituloinfo"></h4>
-                          <h4 id="nombreInfo"></h4>
+                          <h3 class="text-center" id="nombreInfo"></h3>
+                          <p class="text-center" id="descripcionInfo"></p>
+                          <h4 class="text-center" id="precioInfo"></h4>
                           <div class="mb-3">
-                            <label for="exampleInputPassword1" class="form-label">cantidad</label>
+                            <label for="exampleInputPassword1" class="form-label">Cantidad</label>
                             <input type="number" class="form-control" id="cantidadProducto">
                           </div>
                       </div>
@@ -91,6 +92,7 @@
                   </div>
                 </div>
                 <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="limpiar">Limpiar</button>
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                   <button type="button" class="btn btn-primary" id="botonadd">Añadir al Carrito</button>
                 </div>
@@ -99,9 +101,65 @@
           </div>
     </section>
 
+    <section>
+      <!-- Modal -->
+      <div class="modal fade" id="resumencompra" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Relapso Store</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="container" id="basecarro">
 
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+              <button type="button" class="btn btn-primary">Comprar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="text-black py-4" style="background-color: darkmagenta;">
+      <div class="container">
+        <nav class="row" style="color: white;">
+          <!-- logo -->
+          <h2 href="#" class="col-5 text-reset row align-items-center">
+            Relapso Store
+          </h2>
+          <!-- menu -->
+          <ul class="col-4 list-unstyled" style="color: white;">
+            <li class="font-weight-bold text-uppercase">resourse</li>
+            <li><a href="" class="text-reset">link1</a></li>
+            <li><a href="" class="text-reset">link2</a></li>
+            <li><a href="" class="text-reset">link3</a></li>
+          </ul>
+          <!-- redes -->
+          <ul class="col-2 list-unstyled row align-items-center" style="color: white;">
+            <li class="font-weight-bold text-uppercase ">Redes Sociales</li>
+            <li class="d-flex justify-content-between">
+              <a href="" class="text-reset"><i class="fa-brands fa-facebook"></i></a>
+              <a href="" class="text-reset"><i class="fa-brands fa-whatsapp"></i></i></a>
+              <a href="" class="text-reset"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+          </ul>
+          
+        </nav>
+      </div>
+
+    </footer> 
+
+    <div class="text-center py-2"  style="background-color: gray;">
+      <small>&copy; 2022 <b>Relapso Tienda</b> -Derechos Reservados</small>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="js/controladorTienda.js" type="module"></script>
+    <!-- Iconos -->
+    <script src="https://kit.fontawesome.com/67c132a48c.js" crossorigin="anonymous"></script>
 </body>
 </html>
