--- a/index.html
+++ b/index.html
@@ -57,6 +57,24 @@
 
     <main>
 
+      <section>
+        <form>
+
+          <div class="mb-3">
+            <label class="form-label">Email</label>
+            <input type="email" class="form-control" id="email">
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label">Password</label>
+            <input type="password" class="form-control" id="password">
+          </div>
+
+          <button type="submit" class="btn btn-primary w-100" id="botonRegistro">Registro</button>
+
+        </form>
+      </section>
+
         <img src="img/camisetas2.jpg" alt="fotobanner" class="img-fluid w-100">
 
         <section>
@@ -190,6 +208,8 @@
     </div>
 
     <!-- <button type="boton" class="btn btn-info" id="boton">click</button> -->
+    <script src="js/firebase.js" type="module"></script>
+    <script src="js/registro.js" type="module"></script>
 
     <script src="js/llenadoTienda.js"></script>
     <script src="js/eventos.js"></script>
