--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <main>
 
       <section>
-        <form>
+        <form  id="formularioregistro">
 
           <div class="mb-3">
             <label class="form-label">Email</label>
@@ -168,6 +168,23 @@
       <img src="img/marcas.jpg" alt="foto" class="img-fluid w-100" id="fotogal">
     </section>
 
+    <section>
+      <!-- Modal -->
+      <div class="modal fade" id="mensajeinformativo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <p id="mensajemodalinfo"></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     
       <div class="mt-5 mb-5 py-5">
 
@@ -211,7 +228,6 @@
     <script src="js/firebase.js" type="module"></script>
     <script src="js/registro.js" type="module"></script>
 
-    <script src="js/llenadoTienda.js"></script>
     <script src="js/eventos.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
