--- a/tienda.html
+++ b/tienda.html
@@ -65,7 +65,7 @@
     </main>
 
     <section>
-         <!-- Modal -->
+         <!-- Modal VER TODOS -->
          <div class="modal fade" id="modalinfo" tabindex="-1">
             <div class="modal-dialog">
               <div class="modal-content">
@@ -85,7 +85,7 @@
                           <h4 class="text-center" id="precioInfo"></h4>
                           <div class="mb-3">
                             <label for="exampleInputPassword1" class="form-label">Cantidad</label>
-                            <input type="number" class="form-control" id="cantidadProducto">
+                            <input type="number" class="form-control" id="cantidadProducto" min="1" value="1">
                           </div>
                       </div>
                     </div>
@@ -102,7 +102,7 @@
     </section>
 
     <section>
-      <!-- Modal -->
+      <!-- Modal CARRITO -->
       <div class="modal fade" id="resumencompra" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
@@ -116,6 +116,10 @@
               </div>
             </div>
             <div class="modal-footer">
+              <div class="container" id="total">
+
+              </div>
+              <div class="text-center" id="total"></div>             
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
               <button type="button" class="btn btn-primary">Comprar</button>
             </div>
