--- a/tienda.html
+++ b/tienda.html
@@ -116,10 +116,11 @@
               </div>
             </div>
             <div class="modal-footer">
-              <div class="container" id="total">
+              <div class="container">
 
               </div>
-              <div class="text-center" id="total"></div>             
+              <div class="text-center" id="total"></div>
+              <button type="button" class="btn btn-warning" id="btndolar">USD</button>             
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
               <button type="button" class="btn btn-primary">Comprar</button>
             </div>
