--- a/tienda.html
+++ b/tienda.html
@@ -147,9 +147,9 @@
           <ul class="col-2 list-unstyled row align-items-center" style="color: white;">
             <li class="font-weight-bold text-uppercase ">Redes Sociales</li>
             <li class="d-flex justify-content-between">
-              <a href="" class="text-reset"><i class="fa-brands fa-facebook"></i></a>
-              <a href="" class="text-reset"><i class="fa-brands fa-whatsapp"></i></i></a>
-              <a href="" class="text-reset"><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://www.facebook.com/" class="text-reset"><i class="fa-brands fa-facebook"></i></a>
+              <a href="https://web.whatsapp.com/" class="text-reset"><i class="fa-brands fa-whatsapp"></i></i></a>
+              <a href="https://www.instagram.com/?hl=en" class="text-reset"><i class="fa-brands fa-instagram"></i></a>
             </li>
           </ul>
           
